--- a/.github/workflows/custom_release.yaml
+++ b/.github/workflows/custom_release.yaml
@@ -222,10 +222,10 @@ jobs:
         make V=s -j$(nproc)
 
     - name: Upload firmware to release
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: openwrt-firmware
-        path: bin/targets/**/openwrt-*.img
+        path: bin/targets/**/openwrt-*.img.gz
 
     - name: Create Release
       id: create_release
@@ -244,6 +244,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: bin/targets/**/openwrt-*.img
+        asset_path: bin/targets/**/openwrt-*.img.gz
         asset_name: openwrt-latest.img
         asset_content_type: application/octet-stream
