--- a/.github/workflows/custom_release.yaml
+++ b/.github/workflows/custom_release.yaml
@@ -30,7 +30,6 @@ jobs:
           key: ${{ runner.os }}-openwrt-${{ hashFiles('**/*') }}
           restore-keys: |
             ${{ runner.os }}-openwrt-
-
       - name: Set up OpenWrt build environment
         run: |
           sudo apt-get update -y
@@ -40,12 +39,10 @@ jobs:
             libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz \
             mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pip libpython3-dev qemu-utils \
             rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
-
       - name: Update and install feeds
         run: |
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-
       - name: Apply custom configuration
         run: |
           # 修改时区
@@ -53,7 +50,6 @@ jobs:
           sed -i "/timezone='CST-8'/a\        set system.@system[-1].zonename='Asia/Shanghai'" package/base-files/files/bin/config_generate
           # 修改默认IP
           sed -i 's/192.168.1.1/192.168.2.1/g' package/base-files/files/bin/config_generate
-
       - name: Add additional packages
         run: |
           rm -rf feeds/packages/net/v2ray-geodata
@@ -62,7 +58,6 @@ jobs:
           git clone --depth=1 https://github.com/sirpdboy/luci-app-ddns-go.git package/ddns-go
           git clone --depth=1 https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon
           git clone --depth=1 https://github.com/vernesong/OpenClash.git package/luci-app-openclash
-
       - name: Configure build options
         run: |
           # 使用预先配置好的 .config 文件
@@ -220,7 +215,6 @@ jobs:
           CONFIG_TARGET_ROOTFS_PARTSIZE=256
           # CONFIG_TARGET_ROOTFS_TARGZ is not set
           EOF
-
       - name: Verify configuration
         run: make defconfig
 
@@ -231,23 +225,23 @@ jobs:
         run: |
           # 指定 target 和 subtarget
           make V=s -j$(nproc)
-
       - name: Check build output
         run: |
-          if find bin/targets/ -type f -name "*.img.gz" -print -quit | grep -q .; then
-            echo "存在以 .img 结尾的文件"
+          if find bin/targets/ -type f -name "openwrt-x86-64-generic-squashfs-combined-efi.img.gz" -print -quit | grep -q .; then
+            echo "存在以 .img.gz 结尾的文件"
           else
             ls -alhR bin/targets/**/
             exit 1
           fi
-
+      - name: List build output files
+        run: |
+          ls -alh bin/targets/**/
       - name: Create unique tag
         id: create_tag
         run: |
           TIMESTAMP=$(date +%Y%m%d%H%M%S)
           TAG_NAME="build-${TIMESTAMP}"
           echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_ENV
-
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1  # 目前没有更新版本，仍然使用 v1
@@ -265,6 +259,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: bin/targets/**/openwrt-*.img.gz
-          asset_name: openwrt-${{ env.TAG_NAME }}.img
+          asset_path: bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined-efi.img.gz
+          asset_name: openwrt-${{ env.TAG_NAME }}.img.gz
           asset_content_type: application/octet-stream
