--- a/.github/workflows/custom_release.yaml
+++ b/.github/workflows/custom_release.yaml
@@ -222,3 +222,9 @@ jobs:
             bin/targets/**/*.buildinfo
             bin/targets/**/profiles.json
             bin/targets/**/sha256sums
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined-efi.img.gz
